--- a/index.html
+++ b/index.html
@@ -4,34 +4,44 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">   
     <link rel="stylesheet" href="css/style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
     <title>My Portfolio</title>
   </head>
+
+
+
   <body class="mt-5">
-    <nav class="navbar fixed-top navbar-expand-lg navbar navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-expand-lg navbar navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#">Adimas Sutrisno</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-link" href="#">About</a>
-            <a class="nav-link" href="#">Portfolio</a>
-          </div>
-        </div>
+            <a class="navbar-brand" href="#">
+                <img src="img/asset/nv-icon.png" width="30" height="30" alt="" loading="lazy">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <!--say-hey mobile--------->
+	        <a href="#" class="hey d-block d-sm-block d-md-block d-lg-none ">Say Hi!</a>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+            <div class="navbar-nav text-center">
+                <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#">About</a>
+                <a class="nav-link" href="#">Portfolio</a>
+            </div>
+            </div>
+            <!--say-hey deskop--------->
+	        <a href="#" class="hey d-none d-lg-block">Say Hi!</a>
         </div>
     </nav>
 
     <div class="jumbotron jumbotron-fluid">
         <div class="container text-center">
             <img class="rounded rounded-circle img-thumbnail" src="img/profile.jpg" alt="Pofile">
-          <h1 class="display-4">Adimas Sutrisno</h1>
+          <h2 class="display-4 font-weight-bold">Adimas Sutrisno</h2>
           <p class="lead">Selamat datang di Portfolio saya !</p>
         </div>
     </div>
