--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
                 <a class="nav-link" href="#">About</a>
                 <a class="nav-link" href="#">Portfolio</a>
+                <a class="nav-link" href="#">Contact</a>
             </div>
             </div>
             <!--say-hey deskop--------->
@@ -40,9 +41,9 @@
 
     <div class="jumbotron jumbotron-fluid">
         <div class="container text-center">
-            <img class="rounded rounded-circle img-thumbnail" src="img/profile.jpg" alt="Pofile">
-          <h2 class="display-4 font-weight-bold">Adimas Sutrisno</h2>
-          <p class="lead">Selamat datang di Portfolio saya !</p>
+            <img class="rounded rounded-circle" src="img/profile.jpg" alt="Pofile">
+          <h1 class="font-weight-bold mt-3">Adimas Sutrisno</h1>
+          <p class="lead">| Mhs Sistem Informasi UIN JKT | Frontend Web Developer |</p>
         </div>
     </div>
     
@@ -51,83 +52,118 @@
             <div class="row mb-4">
                 <div class="col">
                     <h2 class="text-center">About</h2>
+                    <hr>
                 </div>
 
             </div>
-            <div class="row justify-content-center">
-                <div class="col-md-5">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, iste cupiditate maxime minus excepturi soluta officiis laudantium magnam perspiciatis eaque, tempore, quisquam est aliquid temporibus eius consequatur illum in esse.</p>
+            <div class="row justify-content-center text-justify">
+                <div class="col-md-8">
+                    <p>Saya Adimas Sutrisno, sedang menempuh pendidikan di UIN Jakarta Jurusan Sistem Informasi. Memiliki pengalaman sebagai Frontend Web Developer di PT MetaMata Indonesia. Saya memiliki minat berkarir sebagai web developer dan menguasai HTML, CSS, JavaScript, Bootstrap dll</p>
                 </div>
-                <div class="col-md-5">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores aut dolorem rerum modi, tenetur pariatur quia vero asperiores cum suscipit nostrum doloremque molestias adipisci consectetur animi repudiandae nobis dolorum similique!</p>
-                </div>
+                
             </div>
         </div>
     </section>
 
-    <section id="portfolio" class="potfolio bg-info pb-4">
+    <section id="portfolio" class="portfolio pb-4">
     <div class="container">
         <div class="row mb-4 pt-4">
             <div class="col">
-                <h1 class="text-center">Portfolio</h1>
+                <h2 class="text-center">Portfolio</h2>
+                <hr>
             </div>
         </div>
-        <div class="row mb-4">
-            <div class="col-md">
+        <div class="row">
+            <div class="col-lg-4 col-md-6 col-12 mb-4">
                 <div class="card">
-                    <img src="img/asset/gambar1.png" class="card-img-top" alt="...">
+                    <img src="img/portfolio/signin.png" class="card-img-top" alt="signin">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">Mentrasform Desain UI/UX Signin menjadi sebuah halaman login pada Metamata.id menggunakan HTML, CSS dan Bootstrap</p>
                     </div>
-                  </div>
+                </div>
             </div>
-            <div class="col-md">
+            <div class="col-lg-4 col-md-6 col-12 mb-4">
                 <div class="card">
-                    <img src="img/asset/gambar2.png" class="card-img-top" alt="...">
+                    <img src="img/portfolio/signup.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">Mentrasform Desain UI/UX Signup menjadi sebuah halaman daftar pada Metamata.id menggunakan HTML, CSS dan Bootstrap</p>
                     </div>
-                  </div>
+                </div>
             </div>
-            <div class="col-md">
+            <div class="col-lg-4 col-md-6 col-12 mb-4">
                 <div class="card">
-                    <img src="img/asset/gambar3.png" class="card-img-top" alt="...">
+                    <img src="img/portfolio/listEvent.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">Mentrasform Desain UI/UX ListEvent menjadi sebuah halaman ListEvent pada Metamata.id menggunakan HTML, CSS dan Bootstrap</p>
                     </div>
                   </div>
             </div>
         </div>
-        <div class="row mb-4">
-            <div class="col-md">
+        <div class="row ">
+            <div class="col-lg-4 col-md-6 col-12 mb-4">
                 <div class="card">
-                    <img src="img/asset/gambar4.png" class="card-img-top" alt="...">
+                    <img src="img/portfolio/pendaftaran-event.png" class="card-img-top" alt="signin">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">Mentrasform Desain UI/UX Pop Up Pendaftaran Event menjadi sebuah halaman Pop Up Pendaftaran Event pada Metamata.id menggunakan HTML, CSS, JavaScript dan Bootstrap</p>
                     </div>
                   </div>
             </div>
-            <div class="col-md">
+            <div class="col-lg-4 col-md-6 col-12 mb-4">
                 <div class="card">
-                    <img src="img/asset/gambar5.png" class="card-img-top" alt="...">
+                    <img src="img/portfolio/pendaftaran-ecourse.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">Mentrasform Desain UI/UX Pendaftaran E-Course menjadi sebuah halaman Pop Up Pendaftaran E-Course pada Metamata.id menggunakan HTML, CSS, JavaScript dan Bootstrap</p>
                     </div>
                   </div>
             </div>
-            <div class="col-md">
+            <div class="col-lg-4 col-md-6 col-12 mb-4">
                 <div class="card">
-                    <img src="img/asset/gambar6.png" class="card-img-top" alt="...">
+                    <img src="img/portfolio/chekout.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <p class="card-text">Mentrasform Desain UI/UX Pop Up Checkout menjadi sebuah halaman Pop Up Checkout pada Metamata.id menggunakan HTML, CSS, JavaScript dan Bootstrap</p>
+                    </div>
+                  </div>
+            </div>
+        </div>
+        <div class="row ">
+            <div class="col-lg-4 col-md-6 col-12 mb-4">
+                <div class="card">
+                    <img src="img/portfolio/confirmation-payment.png" class="card-img-top" alt="signin">
+                    <div class="card-body">
+                      <p class="card-text">Mentrasform Desain UI/UX Confirmation Payment menjadi sebuah halaman Confirmation Payment pada Metamata.id menggunakan HTML, CSS, JavaScript dan Bootstrap</p>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12 mb-4">
+                <div class="card">
+                    <img src="img/portfolio/confirmation-payment-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Mentrasform Desain UI/UX Confirmation Payment 2 menjadi sebuah halaman Confirmation Payment 2 pada Metamata.id menggunakan HTML, CSS dan Bootstrap</p>
+                    </div>
+                  </div>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12 mb-4">
+                <div class="card">
+                    <img src="img/portfolio/confitmation-payment-admin.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Mentrasform Desain UI/UX Confirmation Payment Admin Pada Email menjadi sebuah halaman Confirmation Payment Admin pada Metamata.id menggunakan HTML dan CSS</p>
+                    </div>
+                  </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-4 col-lg-4 col-md-6 col-12 mb-4">
+                <div class="card">
+                    <img src="img/portfolio/invoice-email.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <p class="card-text">Mentrasform Desain UI/UX Invoice Email menjadi sebuah halaman Invoice Email pada Metamata.id menggunakan HTML dan CSS</p>
                     </div>
                   </div>
             </div>
         </div>
     </div>
     </section>
-
-    <section id="cintact" class="contact mb-4">
+    <section id="contact" class="contact mb-4">
         <div class="container">
             <div class="row text-center mb-4 pt-4">
                 <div class="col">
@@ -177,11 +213,11 @@
         </div>
     </section>
 
-    <footer class="bg-dark text-white">
+    <footer class="text-white">
         <div class="container">
             <div class="row text-center pt-3">
                 <div class="col">
-                    <p>&copy; Copyright 2021.</p>
+                    <p>&copy; Copyright 2021. Adimas Sutrisno</p>
                 </div>
             </div>
         </div>
